Implementação dos relatórios e correções da GUI